# kitchensink

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  fly.toml
db/migrations/: 0001_init.surql
src/: agent.rs  auth.rs  config.rs  db.rs  documents.rs  extract.rs  main.rs  model.rs  models.rs  routes.rs  storage.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  index.tsx
web/src/components/: DocumentSurface.tsx  GraphCanvas.tsx
web/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  kbd.tsx  label.tsx  separator.tsx  sheet.tsx  skeleton.tsx  spinner.tsx  switch.tsx  textarea.tsx  tooltip.tsx
web/src/lib/: api.ts  hirsel-document-components.ts  types.ts
