[package]
name = "kitchensink-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
argon2 = { version = "0.5", features = ["std"] }
async-stream = "0.3"
async-trait = "0.1"
aws-config = "1"
aws-credential-types = "1"
aws-sdk-s3 = "1"
axum = { version = "0.8", features = ["multipart", "macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
http = "1"
lash = { git = "https://github.com/SamGalanakis/lash", rev = "5c293b6ca3b3229b9e93a749722b0231bfa19d55", default-features = false }
mime = "0.3"
mime_guess = "2"
pdf-extract = "0.10"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std"] }
scraper = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["fs", "macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
surrealdb = { version = "3.0.5", default-features = false, features = ["protocol-http", "protocol-ws", "rustls"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
